<resources>
    <string name="app_name">AAapp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="title_activity_planes">Plans</string>
    <string name="Bienvenida">Welcome to the application of the Ataulfo ​​Argenta Institute</string>
    <string name="acceso_button">Access</string>
    <string name="menu">Choose a option:</string>
    <string name="enseñanza">teaching</string>
    <string name="planes">Plans and projects</string>
    <string name="Contacto">Contact</string>
    <string name="atras">back</string>
    <string name="direccion">Center address:</string>
    <string name="redes">social networks ,phone: and location</string>
    <string name="title_activity_maps">Maps</string>
    <string name="cocina">kitchen and restoration</string>
</resources>